fixed overflow

--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ main {
     flex-flow: row nowrap;
     align-items: center;
     background-color: var(--backgroundColor);
+    overflow: hidden;
 }
 
 #player3Proficiency, #player4Proficiency {
@@ -24,7 +25,6 @@ main {
 #gameBoardContainer {
     aspect-ratio: 1280 / 853;
     height: 100%;
-    overflow-y: hidden;
 }
 #gameBoard {
     height: 100%;
@@ -206,7 +206,7 @@ main {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 #playerHero, #playerProficiency {
     width: 50%;
